--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+psycopg2==2.8.5
 requests==2.23.0
+tzlocal==2.1
 urllib3==1.25.8
 Werkzeug==1.0.0
 xmltodict==0.12.0
